# agenticsocial

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-13-agenticsocial-v1.md
docs/superpowers/specs/: 2026-07-13-agenticsocial-v1-design.md
skills/capture/: SKILL.md
skills/fanout/: SKILL.md
skills/repurpose/: SKILL.md
src/agenticsocial/: cli.py  frontmatter.py  models.py  research.py  textutils.py  workspace.py
src/agenticsocial/x/: auth.py  client.py  publish.py
tests/: test_auth.py  test_cli.py  test_frontmatter.py  test_models.py  test_publish.py  test_research.py  test_textutils.py  test_workspace.py  test_x_client.py
