[project]
name = "agenticsocial"
version = "0.1.0"
description = "Local-first, agent-driven content pipeline: capture, research, draft, review, post."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "keyring>=25.0",
    "ddgs>=9.0",
    "trafilatura>=1.12",
]

[project.scripts]
agsoc = "agenticsocial.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenticsocial"]

[tool.pytest.ini_options]
testpaths = ["tests"]
